[gd_scene load_steps=13 format=2]

[ext_resource path="res://Base_soldier.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/EnemyDetector.tscn" type="PackedScene" id=2]
[ext_resource path="res://DebugLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://weapons/WeaponController.tscn" type="PackedScene" id=4]
[ext_resource path="res://squad mates/SoldierMesh.tres" type="PrismMesh" id=5]
[ext_resource path="res://squad mates/SoldierCollision.tres" type="Shape" id=6]
[ext_resource path="res://misc/AnimationHandlerTeam.gd" type="Script" id=7]
[ext_resource path="res://scripts/TeamLogic.gd" type="Script" id=8]
[ext_resource path="res://squad mates/TeamMate.gd" type="Script" id=9]

[sub_resource type="CylinderShape" id=1]
radius = 1.79634

[sub_resource type="Animation" id=2]
resource_name = "move_to"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ), Vector3( 0.9, 0.9, 0.9 ), Vector3( 1, 1, 1 ) ]
}

[sub_resource type="ViewportTexture" id=3]
viewport_path = NodePath("Debug/Viewport")

[node name="TeamMate" groups=[
"teammate",
] instance=ExtResource( 1 )]
collision_mask = 11
script = ExtResource( 9 )
hit_points = 500

[node name="LogicControl" type="Spatial" parent="." index="0"]
transform = Transform( 1, 0, 7.44047e-22, 0, 1, 0, 7.44048e-22, 0, 1, 0, 0, 0 )
script = ExtResource( 8 )

[node name="MeshInstance" type="MeshInstance" parent="." index="1"]
transform = Transform( -1, -3.89414e-07, 1.70218e-14, 0, -4.37114e-08, -1, 3.89414e-07, -1, 4.37114e-08, 0, 0.5, 0 )
mesh = ExtResource( 5 )
skeleton = NodePath("")
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="." index="2"]
transform = Transform( -1, -3.25841e-07, 5.30863e-14, 0, -1.62921e-07, -1, 3.25841e-07, -1, 1.62921e-07, 0, 0.5, 0 )
shape = ExtResource( 6 )

[node name="Area" type="Area" parent="." index="3"]
collision_layer = 0
collision_mask = 9

[node name="BodyCollision" type="CollisionShape" parent="Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )

[node name="EnemyDetector" parent="." index="4" instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
autoplay = "idle"
anims/idle = SubResource( 2 )
script = ExtResource( 7 )

[node name="Debug" parent="." index="6" instance=ExtResource( 3 )]
texture = SubResource( 3 )

[node name="WeaponController" parent="." index="7" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.251757, 0.505635, -0.845118 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_EnemyDetector_body_exited"]
